# chatter

./: .env.example  .gitignore  CLAUDE.md
.taskmaster/: state.json
.taskmaster/docs/: analytics_improvement_prd.md  chatbot_api_prd.md  conversation_analysis_prd.md  memory_system_prd.md  playbook_enhancement_prd.md
.taskmaster/tasks/: tasks.json
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/api/: recommend.py
backend/src/services/: recommendation_engine.py
backend/tests/: conftest.py  test_health.py
data/insights/: chatter_analysis.md  combined_analysis.md  objection_analysis.md  research_findings.md  training_insights.json  training_insights.md  training_summary.md
data/knowledge_base/: gambits.json  handbook_sections.json
data/test_conversations/: batch_20251222_190730.json  batch_20251222_191240.json  batch_20251222_192212.json  batch_20251222_193942.json  batch_20251222_201944.json
data/tests/: test_results_20251223_105447.json  test_results_20251223_105554.json  test_results_20251223_112335.json  test_results_20251223_112407.json  test_results_20251223_112441.json  test_results_20251223_114619.json  test_results_20251223_115822.json
docs/: dual_mode_chatbot_framework.md  ig_chatbot_prd.md  ig_mode_playbook.md  of_mode_playbook.md  prd.md
frontend/: index.html
scripts/: conversation_parser.py  generate_insights.py  get_examples.py  handbook_parser.py  ocr_extraction.py
scripts/analysis/: __init__.py  ai_pattern_analysis.py  chatter_analysis.py  data_loader.py  enhanced_playbook_generator.py  example_extractor.py  (+5 more)
(+55 files in other folders)
